--- a/uso.html
+++ b/uso.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="uso-celu" content="width=device-width">
   <title>JS Bin</title>
 </head>
 <body>
