--- a/uso.html
+++ b/uso.html
@@ -14,6 +14,8 @@
 <br>
 <br>  
 <script src="https://public.flourish.studio/resources/embed.js"></script></div>  
+<div class="flourish-embed flourish-scatter" data-src="visualisation/6766252">
+<script src="https://public.flourish.studio/resources/embed.js"></script></div>  
   
   
   </body>
