--- a/uso.html
+++ b/uso.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="uso-celu" content="width=device-width">
-  <title>JS Bin</title>
+  <title> Uso de las App del celular</title>
 </head>
 <body>
 <script src="https://public.flourish.studio/resources/embed.js"></script></div>   
